--- a/builder.html
+++ b/builder.html
@@ -28,52 +28,52 @@
 <div id="modelos-disponiveis">
 	
 
-	<div id="modelo0"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de curso</p><img src="imgs/telas/abertura_small.png"></div>
-	<div id="modelo1"  class="modelos-de-tela draggable"><p class="label-telas">Tutorial de Navegação</p><img src="imgs/telas/conteudo1_small.png"></div>
-	<div id="modelo2"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de Módulo</p><img src="imgs/telas/conteudo2_small.png"></div>
-	<div id="modelo3"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo3_small.png"></div>
-	<div id="modelo4"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 2</p><img src="imgs/telas/conteudo4_small.png"></div>
-	<div id="modelo5"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 3</p><img src="imgs/telas/conteudo5_small.png"></div>
-	<div id="modelo6"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 4</p><img src="imgs/telas/conteudo6_small.png"></div>
-	<div id="modelo7"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p><img src="imgs/telas/conteudo7_small.png"></div>
-	<div id="modelo8"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 2</p> <img src="imgs/telas/conteudo8_small.png"></div>
-	<div id="modelo9" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/conteudo9_small.png"></div>
+	<div id="modelo0" data-type="drag"  class="modelos-de-tela draggable" ><p class="label-telas">Abertura de curso</p><img src="imgs/telas/abertura_small.png"></div>
+	<div id="modelo1" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Tutorial de Navegação</p><img src="imgs/telas/conteudo1_small.png"></div>
+	<div id="modelo2" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de Módulo</p><img src="imgs/telas/conteudo2_small.png"></div>
+	<div id="modelo3" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo3_small.png"></div>
+	<div id="modelo4" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 2</p><img src="imgs/telas/conteudo4_small.png"></div>
+	<div id="modelo5" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 3</p><img src="imgs/telas/conteudo5_small.png"></div>
+	<div id="modelo6" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 4</p><img src="imgs/telas/conteudo6_small.png"></div>
+	<div id="modelo7" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p><img src="imgs/telas/conteudo7_small.png"></div>
+	<div id="modelo8" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 2</p> <img src="imgs/telas/conteudo8_small.png"></div>
+	<div id="modelo9" data-type="drag" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/conteudo9_small.png"></div>
 
 
 
 </div>
 
 <div id="esqueleto-stb">
-	<div id="drop1" class="drops"></div>
-	<div id="drop2" class="drops"></div>
-	<div id="drop3" class="drops"></div>
-	<div id="drop4" class="drops"></div>
-	<div id="drop5" class="drops"></div>
-	<div id="drop6" class="drops"></div>
-	<div id="drop7" class="drops"></div>
-	<div id="drop8" class="drops"></div>
-	<div id="drop9" class="drops"></div>
-	<div id="drop10" class="drops"></div>
-	<div id="drop11" class="drops"></div>
-	<div id="drop12" class="drops"></div>
-	<div id="drop13" class="drops"></div>
-	<div id="drop14" class="drops"></div>
-	<div id="drop15" class="drops"></div>
-	<div id="drop16" class="drops"></div>
-	<div id="drop17" class="drops"></div>
-	<div id="drop18" class="drops"></div>
-	<div id="drop19" class="drops"></div>
-	<div id="drop20" class="drops"></div>
-	<div id="drop21" class="drops"></div>
-	<div id="drop22" class="drops"></div>
-	<div id="drop23" class="drops"></div>
-	<div id="drop24" class="drops"></div>
-	<div id="drop25" class="drops"></div>
-	<div id="drop26" class="drops"></div>
-	<div id="drop27" class="drops"></div>
-	<div id="drop28" class="drops"></div>
-	<div id="drop29" class="drops"></div>
-	<div id="drop30" class="drops"></div>
+	<div id="drop1" class="drops" data-type="drop" data-position="1" ></div>
+	<div id="drop2" class="drops" data-type="drop" data-position="2"></div>
+	<div id="drop3" class="drops" data-type="drop" data-position="3"></div>
+	<div id="drop4" class="drops" data-type="drop" data-position="4"></div>
+	<div id="drop5" class="drops" data-type="drop" data-position="5"></div>
+	<div id="drop6" class="drops" data-type="drop" data-position="6"></div>
+	<div id="drop7" class="drops" data-type="drop" data-position="7"></div>
+	<div id="drop8" class="drops" data-type="drop" data-position="8"></div>
+	<div id="drop9" class="drops" data-type="drop" data-position="9"></div>
+	<div id="drop10" class="drops" data-type="drop" data-position="10"></div>
+	<div id="drop11" class="drops" data-type="drop" data-position="11"></div>
+	<div id="drop12" class="drops" data-type="drop" data-position="12"></div>
+	<div id="drop13" class="drops" data-type="drop" data-position="13"></div>
+	<div id="drop14" class="drops" data-type="drop" data-position="14"></div>
+	<div id="drop15" class="drops" data-type="drop" data-position="15"></div>
+	<div id="drop16" class="drops" data-type="drop" data-position="16"></div>
+	<div id="drop17" class="drops" data-type="drop" data-position="17"></div>
+	<div id="drop18" class="drops" data-type="drop" data-position="18"></div>
+	<div id="drop19" class="drops" data-type="drop" data-position="19"></div>
+	<div id="drop20" class="drops" data-type="drop" data-position="20"></div>
+	<div id="drop21" class="drops" data-type="drop" data-position="21"></div>
+	<div id="drop22" class="drops" data-type="drop" data-position="22"></div>
+	<div id="drop23" class="drops" data-type="drop" data-position="23"></div>
+	<div id="drop24" class="drops" data-type="drop" data-position="24"></div>
+	<div id="drop25" class="drops" data-type="drop" data-position="25"></div>
+	<div id="drop26" class="drops" data-type="drop" data-position="26"></div>
+	<div id="drop27" class="drops" data-type="drop" data-position="27"></div>
+	<div id="drop28" class="drops" data-type="drop" data-position="28"></div>
+	<div id="drop29" class="drops" data-type="drop" data-position="29"></div>
+	<div id="drop30" class="drops" data-type="drop" data-position="30"></div>
 </div>
 
 <!-- São Preenchidos dinamicamente -->
