--- a/builder.html
+++ b/builder.html
@@ -28,16 +28,16 @@
 <div id="modelos-disponiveis">
 	
 
-	<div id="modelo0" data-type="drag"  class="modelos-de-tela draggable" ><p class="label-telas">Abertura de curso</p><img src="imgs/telas/abertura_small.png"></div>
-	<div id="modelo1" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Tutorial de Navegação</p><img src="imgs/telas/conteudo1_small.png"></div>
-	<div id="modelo2" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Abertura de Módulo</p><img src="imgs/telas/conteudo2_small.png"></div>
-	<div id="modelo3" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo3_small.png"></div>
-	<div id="modelo4" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 2</p><img src="imgs/telas/conteudo4_small.png"></div>
-	<div id="modelo5" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 3</p><img src="imgs/telas/conteudo5_small.png"></div>
-	<div id="modelo6" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 4</p><img src="imgs/telas/conteudo6_small.png"></div>
-	<div id="modelo7" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p><img src="imgs/telas/conteudo7_small.png"></div>
-	<div id="modelo8" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 2</p> <img src="imgs/telas/conteudo8_small.png"></div>
-	<div id="modelo9" data-type="drag" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/conteudo9_small.png"></div>
+	<div id="modelo0" data-type="drag"  class="modelos-de-tela draggable" ><p class="label-telas">Capa de curso</p><img src="imgs/telas/abertura_small.png"></div>
+	<div id="modelo1" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Tutorial de Navegação</p><img src="imgs/telas/tutorial_small.png"></div>
+	<div id="modelo2" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Objetivos do curso</p><img src="imgs/telas/objetivos_curso_small.png"></div>
+	<div id="modelo3" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Capa de Módulo</p><img src="imgs/telas/capa_de_modulo_small.png"></div>
+	<div id="modelo4" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Objetivos do Módulo</p><img src="imgs/telas/objetivos_modulo_small.png"></div>
+	<div id="modelo5" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo1_small.png"></div>
+	<div id="modelo6" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo2</p><img src="imgs/telas/conteudo2_small.png"></div>
+	<div id="modelo7" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo c/Subtela</p><img src="imgs/telas/subtela_small.png"></div>
+	<div id="modelo8" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p> <img src="imgs/telas/atividade1_small.png"></div>
+	<div id="modelo9" data-type="drag" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/encerramento_small.png"></div>
 
 
 
@@ -117,7 +117,6 @@
 <button id="btn-limpar" class="btn waves-effect waves-light" >Limpar</button>
 
 <button id="btn-doc" class="btn waves-effect waves-light" >Exportar (.doc)</button><br><br>
-<button id="btn-pdf" class="btn waves-effect waves-light" >Exportar (.pdf)</button>
 <button id="btn-contagem" class="btn waves-effect waves-light" >Contagem de Telas</button>
 <button id="btn-voltar" class="btn waves-effect waves-light" >Voltar</button>
 </div>
@@ -136,6 +135,9 @@
 </div>
 <div id="stb-final"></div>
 
+
+
+
 </body>
 
 
@@ -145,4 +147,8 @@
 <script src="js/main.js"></script>
 <script src="js/builder.js"></script>
 <script src="js/html2table.js"></script>
+
+
+
+
 </html>
