--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <h1>Gerador de Storyboards</h1>
 <button id="btn_novo" class="btn waves-effect waves-light btn-inicio" > Novo Storyboard</button> <br><br>
 <button id="btn_continuar" class="btn waves-effect waves-light btn-inicio" > Continuar uma edição</button><br><br>
-<button id="btn_modelo" class="btn waves-effect waves-light btn-inicio" > Gerar modelo a partir de mapa de conteúdos</button><br><br>
+<button id="btn_modelo" class="btn waves-effect waves-light btn-inicio disabled" > Gerar a partir de MCC</button><br><br>
 
 <p>v.1.0</p>
 
@@ -35,7 +35,6 @@
 	<label>Número da demanda:</label> <input type="text"  name="stb-demanda" value=""><br>
 	<label>Nome do curso:</label> <input type="text"      name="stb-curso" value=""><br>
 	<label>Módulo Nº:</label> <input type="text" 		      name="stb-modulo" value=""><br>
-	<label>Objetivo do Módulo: </label><input type="text" name="stb-objetivo" value="" rows="5"><br><br>
 	<label>Modelo:</label>
   <select id="stb-modelo">
   <option value="1">Abertura</option>
@@ -55,5 +54,5 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="js/Storyboard.js"></script>
 <script src="js/main.js"></script>
-<script src="js/modelo1.js"></script>
+
 </html>
