--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -2,8 +2,8 @@
 	<div class="layout-container" data-modelo="0">
 	<div id="capa-de-curso" class="telas">
 		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+		<h1 class="centralizado conteudo_editavel" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
+		<p class="centralizado conteudo_editavel" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
 		</p>
 		
 		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
@@ -20,14 +20,7 @@
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
 
-});
-
-</script>
 
 
 
