--- a/telas-reais/modelo1.html
+++ b/telas-reais/modelo1.html
@@ -1,26 +1,25 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="1">
-	<div id="capa-de-curso" class="telas">
+	<div class="layout-container" data-modelo="0">
+	<div id="tutorial-de-curso" class="telas">
 		
-		<h1 class="centralizado" contenteditable="true" id="M1element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M1element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+		<br><br><p class="centralizado" contenteditable="true" id="M0element1">Este tutorial vai ensiná-lo a navegar pelo curso.
 		</p>
-		<button id="btnHome" class="centralizado" >Iniciar curso</button>			
+		<center><br><img src="imgs/video_tutorial.png" ></center>
+		<br><img src="imgs/botao_avance_tutorial.png" style='right: 0px; margin-left: 700px;'>
+				
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M1element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
-		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M1element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:{{id da imagem}} </p>
+		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de tutorial</p>
+
+	
 		
 	</div>
 
-	<button>Voltar</button>
-	<button>Salvar</button>
+
 
 	</div>
-
 
 
 
