--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -1,27 +1,35 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="2">
-	<div id="capa-de-curso" class="telas">
+	<div class="layout-container" data-modelo="0">
+	<div id="objetivo-de-curso" class="telas">
 		
-		<h1 class="centralizado" contenteditable="true" id="M2element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M2element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+		<div id="coluna1"><h3 contenteditable="true" id="M0element0">Ao longo do curso você vai ver:</h3>
+		<ul contenteditable="true" id="M0element1">
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+
+		</ul>
+		
 		</p>
-		<button id="btnHome" class="centralizado" >Iniciar curso</button>			
+		
+		<p>Ao final, você vai perceber que o lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>		
+
+		</div>
+
+		<div id="coluna2"><img src="imgs/fake1.png"></div>
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M2element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M2element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:{{id da imagem}} </p>
+		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
-	<button>Voltar</button>
-	<button>Salvar</button>
+
 
 	</div>
-<script src="js/html2table.js"></script>
-
 
 
 
