--- a/builder.html
+++ b/builder.html
@@ -118,6 +118,7 @@
 
 <button id="btn-doc" class="btn waves-effect waves-light" >Exportar (.doc)</button><br><br>
 <button id="btn-contagem" class="btn waves-effect waves-light" >Contagem de Telas</button>
+<button id="btn-scorm" class="btn waves-effect waves-light disabled" >Exportar SCORM</button>
 <button id="btn-voltar" class="btn waves-effect waves-light" >Voltar</button>
 </div>
 
