--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -1,18 +1,19 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
+	<div class="layout-container" data-modelo="2">
 	<div id="objetivo-de-curso" class="telas">
-		
+		<br><br><br>
 		<div id="coluna1"><h3 contenteditable="true" id="M0element0">Ao longo do curso você vai ver:</h3>
 		<ul contenteditable="true" id="M0element1">
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
+		<li>  - Lorem ipsum tiamed lorem</li>
+		<li> - Lorem ipsum tiamed lorem</li>
+		<li>- Lorem ipsum tiamed lorem</li>
 
 		</ul>
 		
 		</p>
 		
-		<p>Ao final, você vai perceber que o lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>		
+		
+		<p contenteditable="true">Ao final, você vai perceber que o lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>		
 
 		</div>
 
