--- a/telas-reais/modelo4.html
+++ b/telas-reais/modelo4.html
@@ -1,12 +1,26 @@
-   <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
-	<div id="capa-de-curso" class="telas">
+  <!-- Modelo de tela 1 Capa de curso-->
+	<div class="layout-container" data-modelo="2">
+	<div id="objetivo-de-modulo" class="telas">
 		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+
+		<div id="coluna1"><img src="imgs/fake1.png"></div>
+		<div id="coluna2"><h3 contenteditable="true" id="M0element0">Ao longo deste módulo você vai ver:</h3>
+		<ul contenteditable="true" id="M0element1">
+		<li>  - Lorem ipsum tiamed lorem</li>
+		<li> - Lorem ipsum tiamed lorem</li>
+		<li>- Lorem ipsum tiamed lorem</li>
+
+		</ul>
+		
 		</p>
 		
-		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
+		
+		<p contenteditable="true">Caso já conheça este conteúdo ou prefira ler o e-book sobre o tema, você pode optar por realizar uma atividade de avaliação do seu conhecimento ao final deste módulo e, com isso, avançar para o próximo tema.</p>	
+		<img src="imgs/ir_para_atividade.png">	
+
+		</div>
+
+		
 
 	</div>
 	<div id="orientacoes">
@@ -20,14 +34,6 @@
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
-
-});
-
-</script>
 
 
 
