--- a/telas-reais/modelo3.html
+++ b/telas-reais/modelo3.html
@@ -1,17 +1,18 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
-	<div id="capa-de-curso" class="telas">
-		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+	<div class="layout-container" data-modelo="3">
+	<div id="capa-de-modulo" class="telas">
+		<br><br><br><br>
+		<h3 class="centralizado conteudo_editavel" contenteditable="true" id="M0element0">Módulo 1 </h3>
+		<h1 class="centralizado conteudo_editavel" contenteditable="true" > Título do Módulo </h1>
+		<p class="centralizado conteudo_editavel" contenteditable="true" id="M0element1">Avance para conferir o que este módulo traz para você.<br><br><br>
 		</p>
 		
-		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
+				
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de módulo</p>
 		<h3>Descrição das imagens</h3>
 		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
@@ -20,14 +21,6 @@
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
-
-});
-
-</script>
 
 
 
