--- a/builder.html
+++ b/builder.html
@@ -35,7 +35,7 @@
 	<div id="modelo4" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Objetivos do Módulo</p><img src="imgs/telas/objetivos_modulo_small.png"></div>
 	<div id="modelo5" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo 1</p><img src="imgs/telas/conteudo1_small.png"></div>
 	<div id="modelo6" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo2</p><img src="imgs/telas/conteudo2_small.png"></div>
-	<div id="modelo7" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Conteúdo c/Subtela</p><img src="imgs/telas/subtela_small.png"></div>
+	<div id="modelo7" data-type="drag"  class="modelos-de-tela draggable disabled"><p class="label-telas ">Conteúdo c/Subtela</p><img src="imgs/telas/subtela_small.png"></div>
 	<div id="modelo8" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p> <img src="imgs/telas/atividade1_small.png"></div>
 	<div id="modelo9" data-type="drag" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/encerramento_small.png"></div>
 
@@ -148,8 +148,10 @@
 <script src="js/main.js"></script>
 <script src="js/builder.js"></script>
 <script src="js/html2table.js"></script>
-
-
+<!-- bxSlider Javascript file -->
+<script src="js/jquery.bxslider.min.js"></script>
+<!-- bxSlider CSS file -->
+<link href="css/jquery.bxslider.css" rel="stylesheet" />
 
 
 </html>
