--- a/telas-reais/modelo3.html
+++ b/telas-reais/modelo3.html
@@ -2,9 +2,9 @@
 	<div class="layout-container" data-modelo="3">
 	<div id="capa-de-modulo" class="telas">
 		<br><br><br><br>
-		<h3 class="centralizado conteudo_editavel" contenteditable="true" id="M0element0">Módulo 1 </h3>
-		<h1 class="centralizado conteudo_editavel" contenteditable="true" > Título do Módulo </h1>
-		<p class="centralizado conteudo_editavel" contenteditable="true" id="M0element1">Avance para conferir o que este módulo traz para você.<br><br><br>
+		<h3 class="centralizado conteudo_editavel" contenteditable="true" id="M3Element0">Módulo 1 </h3>
+		<h1 class="centralizado conteudo_editavel" contenteditable="true" id="M3Element1"> Título do Módulo </h1>
+		<p class="centralizado conteudo_editavel" contenteditable="true"  id="M3Element2">Avance para conferir o que este módulo traz para você.<br><br><br>
 		</p>
 		
 				
@@ -12,9 +12,9 @@
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de módulo</p>
+		<p contenteditable="true"  id="M3Element3">1. Aplicar diagramação padrão de tela de abertura de módulo</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M3Element4">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
