--- a/telas-reais/modelo6.html
+++ b/telas-reais/modelo6.html
@@ -1,33 +1,33 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
-	<div id="capa-de-curso" class="telas">
+	<div class="layout-container" data-modelo="5">
+	<div id="conteudo-modelo1" class="telas">
+	
 		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
-		</p>
 		
-		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
+	<div id="coluna1">	<p contenteditable="true" id="M6Element0">Lorem Ipsum
+"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+"Não há ninguém que ame a dor por si só, que a busque e queira tê-la, simplesmente por ser dor..."</p>
+
+<p contenteditable="true" id="M6Element1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget fermentum erat. Curabitur ut aliquet nibh, quis vestibulum tellus. Aliquam semper magna sed tortor placerat, id pellentesque enim ultrices. Ut quis felis id massa varius venenatis. Curabitur quis mauris id nulla vestibulum faucibus. </p>		
+
+
+
+		</div>
+
+		<div id="coluna2"><img src="imgs/fake1.png"></div>
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M6Element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M6Element3">1. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
-
-});
-
-</script>
 
 
 
