--- a/telas-reais/modelo8.html
+++ b/telas-reais/modelo8.html
@@ -1,35 +1,35 @@
-   <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
-	<div id="capa-de-curso" class="telas">
+     <!-- Modelo de tela 1 Capa de curso-->
+	<div class="layout-container" data-modelo="8">
+	<div id="atividade1" class="telas">
+	
 		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
-		</p>
 		
-		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
+	<div id="coluna1">	
+
+    <h3>Atividade</h3>
+	<p contenteditable="true" id="M8Element0">Inserir aqui o enunciado da questão lorem ipsum tiamed lorem lorem,  impsun tiamed. Inserir aqui o enunciado da questão lorem ipsum tiamed lorem lorem,  impsun tiamed. Inserir aqui o enunciado da questão lorem ipsum tiamed lorem lorem,  impsun tiamed</p>
+
+<p contenteditable="true" id="M8Element1">[  ] Inserir aqui a primeira alternativa </p>		
+<p contenteditable="true" id="M8Element2">[  ]Inserir aqui a segunda alternativa </p>
+<p contenteditable="true" id="M8Element3">[  ]Inserir aqui a terceira alternativa </p>
+<p contenteditable="true" id="M8Element4">[  ]Inserir aqui a quarta alternativa </p>
+<img src="imgs/responder.png">
+
+		</div>
+
+	
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M8Element5">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M8Element6">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
-
-});
-
-</script>
-
-
-
 
 
