--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -2,8 +2,8 @@
 	<div class="layout-container" data-modelo="2">
 	<div id="objetivo-de-curso" class="telas">
 		<br><br><br>
-		<div id="coluna1"><h3 contenteditable="true" id="M0element0">Ao longo do curso você vai ver:</h3>
-		<ul contenteditable="true" id="M0element1">
+		<div id="coluna1"><h3 contenteditable="true" id="M2Element0">Ao longo do curso você vai ver:</h3>
+		<ul contenteditable="true" id="M2Element1">
 		<li>  - Lorem ipsum tiamed lorem</li>
 		<li> - Lorem ipsum tiamed lorem</li>
 		<li>- Lorem ipsum tiamed lorem</li>
@@ -13,7 +13,7 @@
 		</p>
 		
 		
-		<p contenteditable="true">Ao final, você vai perceber que o lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>		
+		<p contenteditable="true" id="M2Element2">Ao final, você vai perceber que o lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>		
 
 		</div>
 
@@ -22,9 +22,9 @@
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M2Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M2Element4">1. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
