--- a/telas-reais/modelo4.html
+++ b/telas-reais/modelo4.html
@@ -1,11 +1,11 @@
   <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="2">
+	<div class="layout-container" data-modelo="4">
 	<div id="objetivo-de-modulo" class="telas">
 		
 
 		<div id="coluna1"><img src="imgs/fake1.png"></div>
-		<div id="coluna2"><h3 contenteditable="true" id="M0element0">Ao longo deste módulo você vai ver:</h3>
-		<ul contenteditable="true" id="M0element1">
+		<div id="coluna2"><h3 contenteditable="true" id="M4Element0">Ao longo deste módulo você vai ver:</h3>
+		<ul contenteditable="true" id="M4Element1">
 		<li>  - Lorem ipsum tiamed lorem</li>
 		<li> - Lorem ipsum tiamed lorem</li>
 		<li>- Lorem ipsum tiamed lorem</li>
@@ -15,7 +15,7 @@
 		</p>
 		
 		
-		<p contenteditable="true">Caso já conheça este conteúdo ou prefira ler o e-book sobre o tema, você pode optar por realizar uma atividade de avaliação do seu conhecimento ao final deste módulo e, com isso, avançar para o próximo tema.</p>	
+		<p contenteditable="true" id="M4Element2" >Caso já conheça este conteúdo ou prefira ler o e-book sobre o tema, você pode optar por realizar uma atividade de avaliação do seu conhecimento ao final deste módulo e, com isso, avançar para o próximo tema.</p>	
 		<img src="imgs/ir_para_atividade.png">	
 
 		</div>
@@ -25,9 +25,9 @@
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M4Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M4Element4">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
 
