--- a/telas-reais/modelo9.html
+++ b/telas-reais/modelo9.html
@@ -1,33 +1,28 @@
    <!-- Modelo de tela 1 Capa de curso-->
-	<div class="layout-container" data-modelo="0">
-	<div id="capa-de-curso" class="telas">
+	<div class="layout-container" data-modelo="9">
+	<div id="fim-de-modulo" class="telas">
+		<br><br><br><br>
 		
-		<h1 class="centralizado" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
-		<p class="centralizado" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
+		<p class="centralizado conteudo_editavel texto-sombra" contenteditable="true" id="M9Element0"  >Parabéns! Você chegou ao final deste módulo.</p>
+		<p class="centralizado conteudo_editave texto-sombral" contenteditable="true" id="M9Element1">Utilize o menu de navegação do ambiente virtual de aprendizagem do Sebrae para <br> avançar para o próximo.<br><br><br>
 		</p>
+
+		<p></p>
+		<p></p>
 		
-		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
+
+				
 
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
-		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
-		
+		<p contenteditable="true"  id="M9Element2">1. Aplicar diagramação padrão de fechamento de módulo.</p>
+				
 	</div>
 
 
 
 	</div>
-<script>
-	
-$("#capa-de-curso").click(function(){
-console.log($("#id-shutter").html());
-
-});
-
-</script>
 
 
 
