--- a/builder.html
+++ b/builder.html
@@ -126,7 +126,7 @@
 
 
 <div id="save-dialog" class="dialogs-basic">
-	<P>Deseja Salvar o Projeto?</P>
+	<p>Deseja Salvar o Projeto?</p>
 	<button id="save-y" class="btn waves-effect waves-light">Sim</button>
 	<button id="save-n" class="btn waves-effect waves-light">Não</button>
 
