--- a/telas-reais/modelo9.html
+++ b/telas-reais/modelo9.html
@@ -20,11 +20,19 @@
 				
 	</div>
 
-
+<label>Classificação:</label>
+  <select id="tela-tipo" class="selects">
+  <option value="1">Nova</option>
+  <option value="2">Atualizada</option>
+  <option value="3">Exercício</option>
+ </select><br><br>
 
 	</div>
 
-
+<script>
+	  $('select').material_select();
+	
+</script>
 
 
 
