--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -9,6 +9,7 @@
 		<div class="btn-alinhamento"><button id="btnHome" class="button" >Iniciar curso</button></div>			
 
 	</div>
+
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
@@ -17,10 +18,22 @@
 		
 	</div>
 
+	
+
 
 
 	</div>
-
+<label>Classificação:</label>
+  <select id="tela-tipo" class="selects">
+  <option value="1">Nova</option>
+  <option value="2">Atualizada</option>
+  <option value="3">Exercício</option>
+ </select><br><br>
+	
+<script>
+	  $('select').material_select();
+	
+</script>
 
 
 
