--- a/telas-reais/modelo1.html
+++ b/telas-reais/modelo1.html
@@ -17,12 +17,21 @@
 		
 	</div>
 
-
+<label>Classificação:</label>
+  <select id="tela-tipo" class="selects">
+  <option value="1">Nova</option>
+  <option value="2">Atualizada</option>
+  <option value="3">Exercício</option>
+ </select><br><br>
 
 	</div>
+	
 
 
-
+<script>
+	  $('select').material_select();
+	
+</script>
 
 
 
