--- a/telas-reais/modelo6.html
+++ b/telas-reais/modelo6.html
@@ -24,11 +24,19 @@
 		<p contenteditable="true"  id="M6Element3">1. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
-
+<label>Classificação:</label>
+  <select id="tela-tipo" class="selects">
+  <option value="1">Nova</option>
+  <option value="2">Atualizada</option>
+  <option value="3">Exercício</option>
+ </select><br><br>
 
 
 	</div>
-
+<script>
+	  $('select').material_select();
+	
+</script>
 
 
 
