--- a/telas-reais/modelo7.html
+++ b/telas-reais/modelo7.html
@@ -28,7 +28,12 @@
 		<p contenteditable="true"  id="M7Element4">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
 	</div>
-
+<label>Classificação:</label>
+  <select id="tela-tipo" class="selects">
+  <option value="1">Nova</option>
+  <option value="2">Atualizada</option>
+  <option value="3">Exercício</option>
+ </select><br><br>
 
 
 	</div>
@@ -43,7 +48,10 @@ $('.bxslider').bxSlider({
 
    
 </script>
-
+<script>
+	  $('select').material_select();
+	
+</script>
 
 
 
