--- a/builder.html
+++ b/builder.html
@@ -113,12 +113,12 @@
 
 
 <div id="controles">
-<button id="btn-salvar" class="btn waves-effect waves-light">Salvar Projeto</button>
+<button id="btn-salvar" class="btn waves-effect waves-light disabled">Salvar Projeto</button>
 <button id="btn-limpar" class="btn waves-effect waves-light" >Limpar</button>
 
 <button id="btn-doc" class="btn waves-effect waves-light" >Exportar (.doc)</button><br><br>
 <button id="btn-contagem" class="btn waves-effect waves-light" >Contagem de Telas</button>
-<button id="btn-scorm" class="btn waves-effect waves-light disabled" >Exportar SCORM</button>
+<!-- <button id="btn-scorm" class="btn waves-effect waves-light disabled" >Exportar SCORM</button> -->
 <button id="btn-voltar" class="btn waves-effect waves-light" >Voltar</button>
 </div>
 
