--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -2,7 +2,7 @@
 	<div class="layout-container" data-modelo="0">
 	<div id="capa-de-curso" class="telas">
 		
-		<h1 class="centralizado conteudo_editavel" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> {{Nome do curso}}</h1>
+		<h1 class="centralizado conteudo_editavel" contenteditable="true" id="M0element0">Bem-vindo ao curso<br> <span id="curso-nome"> </span></h1>
 		<p class="centralizado conteudo_editavel" contenteditable="true" id="M0element1">Neste curso, você vai {{Objetivo do curso}}<br><br><br>
 		</p>
 		
@@ -32,6 +32,7 @@
 	
 <script>
 	  $('select').material_select();
+	  $("#curso-nome").html(storyboard.curso);
 	
 </script>
 
