--- a/telas-reais/modelo8.html
+++ b/telas-reais/modelo8.html
@@ -22,7 +22,7 @@
 	</div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M8Element5">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M8Element5">1. Inserir aqui orientações e feedbacks</p>
 		<h3>Descrição das imagens</h3>
 		<p contenteditable="true"  id="M8Element6">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
 		
@@ -31,7 +31,7 @@
   <select id="tela-tipo" class="selects">
   <option value="1">Nova</option>
   <option value="2">Atualizada</option>
-  <option value="3">Exercício</option>
+  <option value="3" selected="selected">Exercício</option>
  </select><br><br>
 
 
