--- a/telas-reais/modelo9.html
+++ b/telas-reais/modelo9.html
@@ -23,7 +23,7 @@
 <label>Classificação:</label>
   <select id="tela-tipo" class="selects">
   <option value="1">Nova</option>
-  <option value="2">Atualizada</option>
+  <option value="2" selected="selected">Atualizada</option>
   <option value="3">Exercício</option>
  </select><br><br>
 
