--- a/telas-reais/modelo4.html
+++ b/telas-reais/modelo4.html
@@ -5,12 +5,10 @@
 
 		<div id="coluna1"><img src="imgs/fake1.png"></div>
 		<div id="coluna2"><h3 contenteditable="true" id="M4Element0">Ao longo deste módulo você vai ver:</h3>
-		<ul contenteditable="true" id="M4Element1">
-		<li>  - Lorem ipsum tiamed lorem</li>
-		<li> - Lorem ipsum tiamed lorem</li>
-		<li>- Lorem ipsum tiamed lorem</li>
+		<p contenteditable="true" id="M4Element1">
+	Inserir texto aqui
 
-		</ul>
+		</p>
 		
 		</p>
 		
@@ -27,7 +25,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M4Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M4Element4">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M4Element4">2. . Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
 		
 	</div>
 <label>Classificação:</label>
