--- a/home.html
+++ b/home.html
@@ -2,18 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 <!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+<link rel="stylesheet" href="css/materialize.min.css">
 <!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+<script src="js/materialize.min.js"></script>
 
 
-<link rel="stylesheet" href="libs/jquery.fancybox.css">
-<script src="libs/jquery.fancybox.js"></script>
+<link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.css">
+<script src="plugins/fancybox/jquery.fancybox.js"></script>
 <title>Gerador de Storyboard</title>
 
 </head>
