--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -3,13 +3,9 @@
 	<div id="objetivo-de-curso" class="telas">
 		<br><br><br>
 		<div id="coluna1"><h3 contenteditable="true" id="M2Element0">Ao longo do curso você vai ver:</h3>
-		<ul contenteditable="true" id="M2Element1">
-		<li>  - Lorem ipsum tiamed lorem</li>
-		<li> - Lorem ipsum tiamed lorem</li>
-		<li>- Lorem ipsum tiamed lorem</li>
+		 <p contenteditable="true" id="M2Element1">Inserir texto aqui</p>
 
-		</ul>
-		
+			
 		</p>
 		
 		
@@ -24,7 +20,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M2Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M2Element4">1. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M2Element4">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
 		
 	</div>
 <label>Classificação:</label>
