--- a/telas-reais/modelo6.html
+++ b/telas-reais/modelo6.html
@@ -8,7 +8,7 @@
 "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
 "Não há ninguém que ame a dor por si só, que a busque e queira tê-la, simplesmente por ser dor..."</p>
 
-<p contenteditable="true" id="M6Element1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget fermentum erat. Curabitur ut aliquet nibh, quis vestibulum tellus. Aliquam semper magna sed tortor placerat, id pellentesque enim ultrices. Ut quis felis id massa varius venenatis. Curabitur quis mauris id nulla vestibulum faucibus. </p>		
+<!-- <p contenteditable="true" id="M6Element1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget fermentum erat. Curabitur ut aliquet nibh, quis vestibulum tellus. Aliquam semper magna sed tortor placerat, id pellentesque enim ultrices. Ut quis felis id massa varius venenatis. Curabitur quis mauris id nulla vestibulum faucibus. </p>	-->	
 
 
 
@@ -21,7 +21,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M6Element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M6Element3">1. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M6Element3">. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
 		
 	</div>
 <label>Classificação:</label>
