--- a/telas-reais/modelo7.html
+++ b/telas-reais/modelo7.html
@@ -25,7 +25,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M7Element3">1. Inserir container de subtelas com os textos acima.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M7Element4">2. Inserir imagem de fundo que dê a ideia de {{inserir informação}}. Referência: shutterstock ID:<span id="id-shutter">{{id da imagem}}</span> </p>
+		<p contenteditable="true"  id="M7Element4">2. . Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ).</p>
 		
 	</div>
 <label>Classificação:</label>
