--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -16,7 +16,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ).</p>
+		<p contenteditable="true"  id="M0element3">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID:</p>
 		
 	</div>
 
@@ -41,17 +41,6 @@
 	
 	  $("#curso-nome").html(storyboard.curso);
 
-	  $("#M0element0, #M0element1").keyup(function () {
-          var  caracteres = 0;
-	  	   caracteres = parseInt(($("#M0element0").text().length)-2) + (parseInt($("#M0element1").text().length)-2);
-	   	  $("#informacoes").html("Número de caracteres: " + caracteres);
-	
-
-	   	  
-
-
-	  });
-    
 
 	
 </script>
