--- a/telas-reais/modelo1.html
+++ b/telas-reais/modelo1.html
@@ -9,9 +9,10 @@
 				
 
 	</div>
+	<div ><p id="informacoes1"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M1element1">1. Aplicar diagramação padrão de tela de tutorial</p>
+		<p contenteditable="true"  id="M1element1">1. Aplicar diagramação padrão de tela de tutorial.</p>
 
 	
 		
@@ -30,6 +31,7 @@
 
 <script>
 	  $('select').material_select();
+	  
 	
 </script>
 
