--- a/telas-reais/modelo9.html
+++ b/telas-reais/modelo9.html
@@ -14,6 +14,7 @@
 				
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M9Element2">1. Aplicar diagramação padrão de fechamento de módulo.</p>
