--- a/builder.html
+++ b/builder.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/jquery-ui.min"></script>
+<script src="js/jquery-ui.min.js"></script>
 <script src="js/FileSaver.js"></script>
 <script src="js/jquery.wordexport.js"></script>
 
