--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -16,11 +16,12 @@
 		<div id="coluna2"><img src="imgs/fake1.png"></div>
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M2Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M2Element4">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
+		<p contenteditable="true"  id="M2Element4">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID: </p>
 		
 	</div>
 <label>Classificação:</label>
@@ -35,6 +36,7 @@
 
 <script>
 	  $('select').material_select();
+	   
 	
 </script>
 
