--- a/telas-reais/modelo4.html
+++ b/telas-reais/modelo4.html
@@ -21,11 +21,12 @@
 		
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M4Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M4Element4">2. . Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
+		<p contenteditable="true"  id="M4Element4">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: </p>
 		
 	</div>
 <label>Classificação:</label>
