--- a/telas-reais/modelo5.html
+++ b/telas-reais/modelo5.html
@@ -16,11 +16,12 @@
 		
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M5Element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M5Element3">2. . Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ).</p>
+		<p contenteditable="true"  id="M5Element3">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID:</p>
 		
 	</div>
 
