--- a/telas-reais/modelo6.html
+++ b/telas-reais/modelo6.html
@@ -17,11 +17,12 @@
 		<div id="coluna2"><img src="imgs/fake1.png"></div>
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M6Element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M6Element3">. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ). </p>
+		<p contenteditable="true"  id="M6Element3">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID: </p>
 		
 	</div>
 <label>Classificação:</label>
