--- a/telas-reais/modelo8.html
+++ b/telas-reais/modelo8.html
@@ -20,11 +20,20 @@
 	
 
 	</div>
+	<div ><p id="informacoes"></p> </div>
+<div id="orientacoes">
+		<h3>Feedback da atividade:</h3>
+		<p contenteditable="true"  id="M8Element7">1. Inserir aqui feedbacks</p>
+	
+		<p contenteditable="true"  id="M8Element8">2. Inserir aqui orientações para o feedback</p>
+		
+	</div>
+
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M8Element5">1. Inserir aqui orientações e feedbacks</p>
+		<p contenteditable="true"  id="M8Element5">1. Inserir orientações</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M8Element6">2. . Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: (  ).</p>
+		<p contenteditable="true"  id="M8Element6">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID:</p>
 		
 	</div>
 <label>Classificação:</label>
