--- a/builder.html
+++ b/builder.html
@@ -39,6 +39,17 @@
 	<div id="modelo8" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Atividade 1</p> <img src="imgs/telas/atividade1_small.png"></div>
 	<div id="modelo9" data-type="drag" class="modelos-de-tela draggable"><p class="label-telas">Encerramento</p><img src="imgs/telas/encerramento_small.png"></div>
 
+	<!-- Novos Modelos -->
+
+	<div id="modelo10" data-type="drag"  class="modelos-de-tela draggable" ><p class="label-telas">Somente texto</p><img src="imgs/telas/tela10_small.png"></div>
+	<div id="modelo11" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Somente texto (2 colunas)</p><img src="imgs/telas/tela11_small.png"></div>
+	<div id="modelo12" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Box c/ ícone</p><img src="imgs/telas/tela12_small.png"></div>
+	<div id="modelo13" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Somente imagem</p><img src="imgs/telas/tela13_small.png"></div>
+	<div id="modelo14" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Somente imagem (2 colunas)</p><img src="imgs/telas/tela14_small.png"></div>
+	<div id="modelo15" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Galeria</p><img src="imgs/telas/tela15_small.png"></div>
+	<div id="modelo16" data-type="drag"  class="modelos-de-tela draggable"><p class="label-telas">Slider</p><img src="imgs/telas/tela16_small.png"></div>
+
+
 
 
 </div>
@@ -138,7 +149,7 @@
 <div id="stb-final"></div>
 <div id="contagem-de-telas"></div>
 
-
+<br><br>
 
 </body>
 
