--- a/telas-reais/modelo4.html
+++ b/telas-reais/modelo4.html
@@ -24,9 +24,9 @@
 	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M4Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M4Element3">1. Aplicar diagramação padrão de tela dos objetivos do módulo.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M4Element4">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: </p>
+		<p contenteditable="true"  id="M4Element4">2. Inserir imagem que dê a ideia de:  . Referência: shutterstock ID: </p>
 		
 	</div>
 <label>Classificação:</label>
