--- a/telas-reais/modelo5.html
+++ b/telas-reais/modelo5.html
@@ -19,9 +19,9 @@
 	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M5Element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M5Element2">1. Texto distribuído na tela, com imagens ilustrativas e efeitos de transição.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M5Element3">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID:</p>
+		<p contenteditable="true"  id="M5Element3">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID:</p>
 		
 	</div>
 
