--- a/telas-reais/modelo7.html
+++ b/telas-reais/modelo7.html
@@ -24,7 +24,7 @@
 	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M7Element3">1. Inserir container de subtelas com os textos acima.</p>
+		<p contenteditable="true"  id="M7Element3">1. Inserir template de subtelas.</p>
 		<h3>Descrição das imagens</h3>
 		<p contenteditable="true"  id="M7Element4">2. Inserir imagem que dê a ideia de:   . Referência: shutterstock ID:</p>
 		
