--- a/telas-reais/modelo0.html
+++ b/telas-reais/modelo0.html
@@ -16,7 +16,7 @@
 		<h3>Orientações Gerais:</h3>
 		<p contenteditable="true"  id="M0element2">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M0element3">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID:</p>
+		<p contenteditable="true"  id="M0element3">2. Inserir imagem que dê a ideia de:  . Referência: shutterstock ID:</p>
 		
 	</div>
 
