--- a/telas-reais/modelo2.html
+++ b/telas-reais/modelo2.html
@@ -3,7 +3,7 @@
 	<div id="objetivo-de-curso" class="telas">
 		<br><br><br>
 		<div id="coluna1"><h3 contenteditable="true" id="M2Element0">Ao longo do curso você vai ver:</h3>
-		 <p contenteditable="true" id="M2Element1">Inserir texto aqui</p>
+		
 
 			
 		</p>
@@ -19,7 +19,7 @@
 	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M2Element3">1. Aplicar diagramação padrão de tela de abertura de curso.</p>
+		<p contenteditable="true"  id="M2Element3">1. Aplicar diagramação padrão de tela de objetivos de curso.</p>
 		<h3>Descrição das imagens</h3>
 		<p contenteditable="true"  id="M2Element4">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID: </p>
 		
