--- a/telas-reais/modelo3.html
+++ b/telas-reais/modelo3.html
@@ -13,9 +13,9 @@
 	<div ><p id="informacoes"></p> </div>
 	<div id="orientacoes">
 		<h3>Orientações Gerais:</h3>
-		<p contenteditable="true"  id="M3Element3">1. Aplicar diagramação padrão de tela de abertura de módulo</p>
+		<p contenteditable="true"  id="M3Element3">1. Aplicar diagramação padrão de tela de abertura de módulo.</p>
 		<h3>Descrição das imagens</h3>
-		<p contenteditable="true"  id="M3Element4">2. Inserir imagem que dê a ideia de: (  )  . Referência: shutterstock ID: </p>
+		<p contenteditable="true"  id="M3Element4">2. Inserir imagem que dê a ideia de: . Referência: shutterstock ID: </p>
 		
 	</div>
 <label>Classificação:</label>
